--- a/odonto/templates/records/fp17_clinical_data_set.html
+++ b/odonto/templates/records/fp17_clinical_data_set.html
@@ -1,123 +1,210 @@
-<span ng-show="item.scale_and_polish">
-     Scale And Polish
-   <br />
-</span>
-<span ng-show="item.fluoride_varnish">
-     Fluoride Varnish
-   <br />
-</span>
-<span ng-show="item.fissure_sealants">
-  Fissure sealants: [[ item.fissure_sealants ]]
-   <br />
-</span>
-<span ng-show="item.radiographs_taken">
-  Radiographs taken:
-    [[ item.radiographs_taken ]]
-   <br />
-</span>
-<span ng-show="item.endodontic_treatment">
-     Endodontic Treatment
-   <br />
-</span>
-<span ng-show="item.permanent_fillings_and_sealant_restorations">
-  Permanent fillings and Sealant Restorations:
-    [[ item.permanent_fillings_and_sealant_restorations ]]
-   <br />
-</span>
-<span ng-show="item.extractions">
-  Extractions:
-    [[ item.extractions ]]
-   <br />
-</span>
-<span ng-show="item.crowns_provided">
-  Crowns provided:
-    [[ item.crowns_provided ]]
-   <br />
-</span>
-<span ng-show="item.upper_denture_acrylic">
-  Upper denture acrylic:
-    [[ item.upper_denture_acrylic ]]
-   <br />
-</span>
-<span ng-show="item.lower_denture_acrylic">
-  Lower denture acrylic:
-    [[ item.lower_denture_acrylic ]]
-   <br />
-</span>
-<span ng-show="item.upper_denture_metal">
-  Upper denture metal:
-    [[ item.upper_denture_metal ]]
-   <br />
-</span>
-<span ng-show="item.lower_denture_metal">
-  Lower denture metal:
-    [[ item.lower_denture_metal ]]
-   <br />
-</span>
-<span ng-show="item.veneers_applied">
-  Veneers applied:
-    [[ item.veneers_applied ]]
-   <br />
-</span>
-<span ng-show="item.inlays">
-  Inlays:
-    [[ item.inlays ]]
-   <br />
-</span>
-<span ng-show="item.bridges_fitted">
-  Bridges fitted:
-    [[ item.bridges_fitted ]]
-   <br />
-</span>
-<span ng-show="item.referral_for_advanced_mandatory_services_band">
-  Referral fora advanced mandatory services band:
-    [[ item.referral_for_advanced_mandatory_services_band ]]
-   <br />
-</span>
-<span ng-show="item.examination">
-     Examination
-   <br />
-</span>
-<span ng-show="item.antibiotic_items_prescribed">
-  Antibiotic items prescribed:
-    [[ item.antibiotic_items_prescribed ]]
-   <br />
-</span>
-<span ng-show="item.other_treatment">
-     Other Treatment
-   <br />
-</span>
-<span ng-show="item.best_practice_prevention">
-     Best Practice Prevention According To Delivering Better Oral Health Offered
-   <br />
-</span>
-<span ng-show="item.decayed_teeth_permanent">
-  Decayed teeth permanent:
-    [[ item.decayed_teeth_permanent ]]
-   <br />
-</span>
-<span ng-show="item.decayed_teeth_deciduous">
-  Decayed teeth deciduous:
-    [[ item.decayed_teeth_deciduous ]]
-   <br />
-</span>
-<span ng-show="item.missing_teeth_permanent">
-  Missing teeth permanent:
-    [[ item.missing_teeth_permanent ]]
-   <br />
-</span>
-<span ng-show="item.missing_teeth_deciduous">
-  Missing teeth deciduous:
-    [[ item.missing_teeth_deciduous ]]
-   <br />
-</span>
-<span ng-show="item.filled_teeth_permanent">
-  Filled teeth permanent:
-    [[ item.filled_teeth_permanent ]]
-   <br />
-</span>
-<span ng-show="item.filled_teeth_deciduous">
-  Filled teeth deciduous:
-    [[ item.filled_teeth_deciduous ]]
-   <br />
-</span>
+<table class="table table-striped">
+  <tr>
+    <td>
+      Scale and polish
+    </td>
+    <td>
+      <span ng-show="item.scale_and_polish">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Fluoride varnish
+    </td>
+    <td>
+      <span ng-show="item.fluoride_varnish">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Fissure sealants
+    </td>
+    <td>
+      [[ item.fissure_sealants ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Radiographs taken
+    </td>
+    <td>
+      [[ item.radiographs_taken ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Endodontic treatment
+    </td>
+    <td>
+      [[ item.endodontic_treatment ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Permanent fillings and sealant restorations
+    </td>
+    <td>
+      [[ item.permanent_fillings_and_sealant_restorations ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Extractions
+    </td>
+    <td>
+      [[ item.extractions ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Crowns provided
+    </td>
+    <td>
+      [[ item.crowns_provided ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Upper denture acrylic
+    </td>
+    <td>
+      [[ item.upper_denture_acrylic ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Lower denture acrylic
+    </td>
+    <td>
+      [[ item.lower_denture_acrylic ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Upper denture metal
+    </td>
+    <td>
+      [[ item.upper_denture_metal ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Lower denture metal
+    </td>
+    <td>
+      [[ item.lower_denture_metal ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Veneers applied
+    </td>
+    <td>
+      [[ item.veneers_applied ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Inlays
+    </td>
+    <td>
+      [[ item.inlays ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Bridges fitted
+    </td>
+    <td>
+      [[ item.bridges_fitted ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Referral for advanced mandatory services band
+    </td>
+    <td>
+      [[ item.referral_for_advanced_mandatory_services_band ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Examination
+    </td>
+    <td>
+      <span ng-show="item.examination">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Antibiotic items prescribed
+    </td>
+    <td>
+      [[ item.antibiotic_items_prescribed ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Other treatment
+    </td>
+    <td>
+      <span ng-show="item.other_treatment">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Best practice prevention according to Delivering Better Oral Health offered
+    </td>
+    <td>
+      <span ng-show="item.best_practice_prevention">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Decayed teeth permanent
+    </td>
+    <td>
+      [[ item.decayed_teeth_permanent ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Decayed teeth deciduous
+    </td>
+    <td>
+      [[ item.decayed_teeth_deciduous ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Missing teeth permanent
+    </td>
+    <td>
+      [[ item.missing_teeth_permanent ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Missing teeth deciduous
+    </td>
+    <td>
+      [[ item.missing_teeth_deciduous ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Filled teeth permanent
+    </td>
+    <td>
+      [[ item.filled_teeth_permanent ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Filled teeth deciduous
+    </td>
+    <td>
+      [[ item.filled_teeth_deciduous ]]
+    </td>
+  </tr>
+</table>
