--- a/odonto/templates/records/fp17_exemptions.html
+++ b/odonto/templates/records/fp17_exemptions.html
@@ -1,60 +1,122 @@
-<span ng-show="item.patient_under_18">
-     Patient Under 18
-   <br />
-</span>
-<span ng-show="item.full_remission_hc2_cert">
-     Full Remission Hc2 Cert
-   <br />
-</span>
-<span ng-show="item.partial_remission_hc3_cert">
-     Partial Remission Hc3 Cert
-   <br />
-</span>
-<span ng-show="item.expectant_mother">
-     Expectant Mother
-   <br />
-</span>
-<span ng-show="item.nursing_mother">
-     Nursing Mother
-   <br />
-</span>
-<span ng-show="item.aged_18_in_full_time_education">
-     Aged 18 In Full Time Education
-   <br />
-</span>
-<span ng-show="item.income_support">
-     Income Support
-   <br />
-</span>
-<span ng-show="item.nhs_tax_credit_exemption">
-     Nhs Tax Credit Exemption
-   <br />
-</span>
-<span ng-show="item.income_based_jobseekers_allowance">
-     Income Based Jobseekers Allowance
-   <br />
-</span>
-<span ng-show="item.pension_credit_guarantee_credit">
-     Pension Credit Guarantee Credit
-   <br />
-</span>
-<span ng-show="item.prisoner">
-     Prisoner
-   <br />
-</span>
-<span ng-show="item.income_related_employment_and_support_allowance">
-     Income Related Employment And Support Allowance
-   <br />
-</span>
-<span ng-show="item.universal_credit">
-     Universal Credit
-   <br />
-</span>
-<span ng-show="item.evidence_of_exception_or_remission_seen">
-     Evidence Of Exception Or Remission Seen
-   <br />
-</span>
-<span ng-show="item.patient_charge_collected">
+<table class="table table-striped">
+  <tr>
+    <td>
+      Patient under 18
+    </td>
+    <td>
+      <span ng-show="item.patient_under_18">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Full remission HC2 cert
+    </td>
+    <td>
+      <span ng-show="item.full_remission_hc2_cert">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Partial remission HC3 cert
+    </td>
+    <td>
+      <span ng-show="item.partial_remission_hc3_cert">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Expectant mother
+    </td>
+    <td>
+        <span ng-show="item.expectant_mother">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Nursing mother
+    </td>
+    <td>
+        <span ng-show="item.nursing_mother">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+        Aged 18 in full time education
+    </td>
+    <td>
+        <span ng-show="item.aged_18_in_full_time_education">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+        Income support
+    </td>
+    <td>
+        <span ng-show="item.income_support">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+        NHS tax credit exemption
+    </td>
+    <td>
+        <span ng-show="item.nhs_tax_credit_exemption">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+        Income based jobseekers allowance
+    </td>
+    <td>
+        <span ng-show="item.income_based_jobseekers_allowance">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+        Pension credit guarantee credit
+    </td>
+    <td>
+        <span ng-show="item.pension_credit_guarantee_credit">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+        Prisoner
+    </td>
+    <td>
+        <span ng-show="item.prisoner">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+        Income related employment and support allowance
+    </td>
+    <td>
+        <span ng-show="item.income_related_employment_and_support_allowance">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+        Universal credit
+    </td>
+    <td>
+        <span ng-show="item.universal_credit">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Evidence of exception or remission seen
+    </td>
+    <td>
+        <span ng-show="item.evidence_of_exception_or_remission_seen">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+    Patient charge collected
+    </td>
+    <td>
     [[ item.patient_charge_collected ]]
-   <br />
-</span>
+    </td>
+  </tr>
+</table>
