--- a/odonto/templates/patient_detail.html
+++ b/odonto/templates/patient_detail.html
@@ -12,6 +12,22 @@
   </p>
 </div>
 
+
+<div id="episode-history">
+  <h4>Courses of treatment</h4>
+  <a class=""
+     ng-class="{'bg-active': view == null && e.id == episode.id}"
+     ng-repeat="e in patient.episodes"
+     href="[[ '/#' + e.link]]"
+     ng-click="switch_to_episode($index, $event)"
+     >
+    [[ e.fp17_incomplete_treatment[0].treatment_band ]]
+    [[ e.fp17_incomplete_treatment[0].completion_or_last_visit | momentDateFormat:'YYYY']]
+    [[ e.stage ]]
+  </a>
+</div>
+
+
 <div class="container-fluid content-offset {% block container_classes %}{% endblock %}"
      ng-hide="patient == null">
   <div class="panel panel-primary panel-container patient-detail {% block panel_classes %}{% endblock %}">
@@ -21,14 +37,14 @@
         {% block heading %}{% icon 'fa-user' %}[[ patient.demographics[0].first_name ]] [[ patient.demographics[0].surname ]]{% endblock %}
         <small>
           {% block subheading %}
-            [[ patient.demographics[0].date_of_birth | shortDate ]]
+            [[ patient.demographics[0].date_of_birth | displayDate ]]
             ([[ patient.demographics[0].date_of_birth | age ]])
           {% endblock %}
         </small>
 
         <!-- Key Action buttons : We can probably only have one of these at a time. -->
         <span ng-show="episode.fp17_incomplete_treatment[0].date_of_acceptance">
-          {% button_to "Complete FP17" pathways.Fp17Pathway ngpatient="patient.id" ngepisode="episode.id" classes="btn-primary btn-lg pull-right" %}
+          {% button_to "Complete FP17" pathways.CompleteFP17Pathway ngpatient="patient.id" ngepisode="episode.id" classes="btn-primary btn-lg pull-right" %}
         </span>
         <span ng-hide="episode.fp17_incomplete_treatment[0].date_of_acceptance">
           {% button_to "Open an FP17" pathways.Fp17Pathway ngpatient="patient.id" ngepisode="episode.id" classes="btn-primary btn-lg pull-right" %}
@@ -56,47 +72,6 @@
 
     <div class="panel-body {% block panel_body_classes %}{% endblock %}">
 
-      <h3 ng-init="historyCollapsed=true">
-
-        <!-- TODO replace this with non-hard coded category -->
-        [[ episode.fp17_incomplete_treatment[0].date_of_acceptance | momentDateFormat:'DD/MM/YYYY' ]] -
-        [[ episode.fp17_incomplete_treatment[0].completion_or_last_visit | momentDateFormat:'DD/MM/YYYY' ]]
-        <button class="btn btn-secondary pull-right" ng-click="historyCollapsed = !historyCollapsed">
-          {% icon "fa-history" %}
-          Show treatment history
-        </button>
-      </h3>
-
-      <!-- Begin Treatment history display -->
-      <div class="row content-offset-25" uib-collapse="historyCollapsed">
-        <div class="col-md-6 col-md-offset-3">
-          <div class="panel panel-default">
-            <div class="panel-heading ">
-              <h3>
-                {% icon "fa-history" %}
-                Courses of Treatment
-              </h3>
-            </div>
-            <div class="list-group">
-              <a class="list-group-item episodelist pointer"
-                 ng-class="{'bg-active': view == null && e.id == episode.id}"
-                 ng-repeat="e in patient.episodes"
-                 href="[[ '/#' + e.link]]"
-                 ng-click="switch_to_episode($index, $event)"
-                 >
-                Treatment
-                [[ e.fp17_incomplete_treatment[0].date_of_acceptance | momentDateFormat:'DD/MM/YYYY' ]] -
-                [[ e.fp17_incomplete_treatment[0].completion_or_last_visit | momentDateFormat:'DD/MM/YYYY' ]]
-                <span ng-show="e.start">
-                  [[ e.start | shortDate ]] - [[ e.end | shortDate ]]<span ng-show="!e.end">Current</span>
-                </span>
-              </a>
-            </div>
-          </div> <!-- Panel -->
-        </div> <!-- col6 -->
-      </div> <!-- row -->
-      <!-- End Treatment history -->
-      <hr />
       <!-- Begin Current Episode Display -->
       <div class="row content-offset-25">
         {% block content %}
