--- a/odonto/templates/records/fp17_treatment_category.html
+++ b/odonto/templates/records/fp17_treatment_category.html
@@ -1,40 +1,66 @@
-<span ng-show="item.treatment_category_band_1">
-     Treatment Category Band 1
-   <br />
-</span>
-<span ng-show="item.treatment_category_band_2">
-     Treatment Category Band 2
-   <br />
-</span>
-<span ng-show="item.treatment_category_band_3">
-     Treatment Category Band 3
-   <br />
-</span>
-<span ng-show="item.urgent_treatment">
-     Urgent Treatment
-   <br />
-</span>
-<span ng-show="item.regulation_11_replacement_appliance">
-     Regulation 11 Replacement Appliance
-   <br />
-</span>
-<span ng-show="item.prescription_only">
-     Prescription Only
-   <br />
-</span>
-<span ng-show="item.denture_repairs">
-     Denture Repairs
-   <br />
-</span>
-<span ng-show="item.bridge_repairs">
-     Bridge Repairs
-   <br />
-</span>
-<span ng-show="item.arrest_of_bleeding">
-     Arrest Of Bleeding
-   <br />
-</span>
-<span ng-show="item.removal_of_sutures">
-     Removal Of Sutures
-   <br />
-</span>
+<table class="table table-striped">
+  <tr>
+    <td>
+      Treatment category
+    </td>
+    <td>
+      [[ item.treatment_category ]]
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Urgent treatment
+    </td>
+    <td>
+      <span ng-show="item.urgent_treatment">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Regulation 11 replacement appliance
+    </td>
+    <td>
+      <span ng-show="item.regulation_11_replacement_appliance">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Prescription only
+    </td>
+    <td>
+      <span ng-show="item.prescription_only">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Denture repairs
+    </td>
+    <td>
+      <span ng-show="item.denture_repairs">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Bridge repairs
+    </td>
+    <td>
+      <span ng-show="item.bridge_repairs">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Arrest of bleeding
+    </td>
+    <td>
+      <span ng-show="item.arrest_of_bleeding">X</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Removal of sutures
+    </td>
+    <td>
+      <span ng-show="item.removal_of_sutures">X</span>
+    </td>
+  </tr>
+</table>
